--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,30 +2,39 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+.blue-sky {
+  background: #6699cc;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
+.midnight-blue {
+  background: #003b6d;
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+.text-midnight {
+  color: #003b6d;
 }
 
+.silver {
+  background: #bdbdbd;
+}
+
+.gray {
+  background: #676767;
+}
+
+.button {
+  background: #bdbdbd;
+  color: black;
+}
+
+.button:hover {
+  background: #6699cc;
+  color: white;
+}
+
+.gray-text {
+  color: #676767;
+}
 @layer utilities {
   .text-balance {
     text-wrap: balance;
